# advent2025

./: pyproject.toml
01/: main.py
02/: main.py
03/: main.py
04/: main.py
05/: main.py
06/: main.py
07/: main.py
08/: main.py
09/: main.py
10/: main.py
11/: main.py
